# gmail-calendar-agent

./: .env.example  .gitignore  PLAN.md  PRD.md  README.md  TODO.md  main.py  pyproject.toml
gmail-meeting-scheduler/: SKILL.md
gmail_calendar_agent/: __init__.py  agent.py  auth.py  calendar_client.py  classifier.py  config.py  gmail_client.py  llm.py
screenshots/: .gitkeep
tests/: test_classifier.py
